--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,6 @@
 <title>Server</title>
 </head>
 <body>
-<meta http-equiv="refresh" content="0.01;url=https://i.shadowrocket.org/">
+<meta http-equiv="refresh" content="0.01;url=https://s-s-r.github.io/wiki/">
 </body>
 </html>
